# Basketball_Grader_Wizard

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  build_shareable_site.py  pyproject.toml  requirements.txt
.git_local_backup_20260407_203904/: COMMIT_EDITMSG  config  index
.git_local_backup_20260407_203904/refs/remotes/origin/: main
.github/: copilot-instructions.md
config/: __init__.py  settings.py
src/: __init__.py  app.py  cache.py  styles.py
src/analytics/: __init__.py  historical.py
src/data/: __init__.py  matchup_storage.py  parser.py  storage.py
src/exports/: __init__.py  appeal.py  excel.py
src/grading/: __init__.py  bye_manager.py  grades.py  matchup_learner.py  matchup_optimizer.py  metrics.py  overrides.py  power_rating.py  recommender.py  round_analyzer.py  strength_of_schedule.py  transitive.py
src/models/: __init__.py  game_result.py  matchup.py  recommendation.py
src/ui/: __init__.py  charts.py  comparison_view.py  filters.py  historical_view.py  matchups_view.py  metrics_cards.py  power_rating_view.py  recommendations_view.py  sos_view.py  standings_view.py  team_deep_dive.py
tests/: conftest.py  test_app_upload_flow.py  test_data_pipeline.py  test_grading.py
